# font-sync

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  QUICK_START.md  README.md  README_ja.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
src/: __init__.py  cache.py  config.py  font_inventory.py  font_manager.py  font_status.py  lockfile.py  main.py  parallel.py  resolver.py  utils.py
src/commands/: __init__.py  adopt.py  apply.py  clean.py  import_fonts.py  init.py  list.py  lock_cmd.py  sync.py
tests/: __init__.py  conftest.py  test_adopt.py  test_apply.py  test_cache.py  test_config.py  test_config_multi_source.py  test_font_inventory.py  test_font_manager.py  test_font_status.py  test_integration.py  test_lock_e2e.py  test_lockfile.py  test_parallel.py  test_resolve_e2e.py  test_resolver.py  test_sync_multi_source.py  test_utils.py
