[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "font-sync"
version = "1.0.0"
description = "macOS専用のCLIフォント同期ツール"
readme = "README.md"
license = "MIT"
authors = [{ name = "URAPRO", email = "your.email@example.com" }]  # TODO: リリース前に更新
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment",
    "Topic :: Utilities",
]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "build>=1.0.0",
]

[project.scripts]
font-sync = "src.main:app"

[project.urls]
Homepage = "https://github.com/URAPRO/font-sync"
Repository = "https://github.com/URAPRO/font-sync"
Issues = "https://github.com/URAPRO/font-sync/issues"

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
